# FutSim

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CountryList.cmake  FileList.cmake  GenerateVersionHeader.cmake  LICENSE  PrintVersion.cmake  README.md  clang-tidy.sh  cppcheck.sh
.github/workflows/: Build.yml  Docs.yml  clang-tidy.yml  cmake-multi-platform.yml  cmake.yml  deploy-docs.yml  doxygen-pages.yml  test-multi-platform.yml
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  EventProbabilities.dox  Events.dox  Individualities.dox  Injuries.dox  Tactics.dox  model.ipynb  tactics.ipynb
include/: .gitignore  CEnumDistribution.h  CPerson.h  CPersonTypes.h  CPlayTime.h  CPlayTimeTypes.h  Config.h.in  DefaultTraits.h  ENationality.h  ENationality.h.in  EnumUtils.h  ExceptionUtils.h  FutSim.h.in  IJsonable.h  IJsonableTypes.h  IWritable.h  JsonUtils.h  NameUtils.h  NationalityUtils.h  NumberUtils.h  ProbabilityUtils.h
include/football/: CChanceState.h  CChancesDrawConfiguration.h  CChancesDrawConfigurationTypes.h  CDrawConfiguration.h  CDrawConfigurationTypes.h  CExtraTime.h  CExtraTimePeriodPlayPolicy.h  CExtraTimePeriodPolicy.h  CExtraTimePeriodState.h  CExtraTimePeriodStates.h  CFoulDrawConfiguration.h  CFoulDrawConfigurationTypes.h  CFoulState.h  CGoalDrawConfiguration.h  CGoalDrawConfigurationTypes.h  CGoalRule.h  CLineup.h  CLineupConfiguration.h  CLineupConfigurationTypes.h  CLineupTypes.h  CMatch.h  CMatchConfiguration.h  CMatchConfigurationTypes.h  CMatchState.h  CMatchStrategy.h  CPenaltyShootoutConfiguration.h  CPenaltyShootoutConfigurationTypes.h  CPenaltyShootoutState.h  CPenaltyState.h  CPeriodPlayPolicy.h  CPeriodPolicy.h  CPeriodState.h  CPeriodStates.h  CPlayState.h  CPlayTime.h  CPlayTimeTypes.h  CPlayer.h  CPlayerSkills.h  CPlayerSkillsTypes.h  CPlayerState.h  (+29 more)
include/football/traits/: CChanceState.h  CChancesDrawConfiguration.h  CDrawConfiguration.h  CExtraTime.h  CFoulDrawConfiguration.h  CFoulState.h  CGoalDrawConfiguration.h  CGoalRule.h  CLineup.h  CLineupConfiguration.h  CMatch.h  CMatchConfiguration.h  CMatchState.h  CPenaltyShootoutConfiguration.h  CPenaltyShootoutState.h  CPenaltyState.h  CPeriodState.h  CPeriodStates.h  CPlayState.h  CPlayTime.h  CPlayer.h  CPlayerSkills.h  CPlayerState.h  CPossessionDrawConfiguration.h  CPossessionState.h  CStadium.h  CTacticConfiguration.h  CTacticsConfiguration.h  CTeam.h  CTeamStrategy.h  CTieCondition.h
include/football/types/: CChanceState.h  CChancesDrawConfiguration.h  CDrawConfiguration.h  CFoulDrawConfiguration.h  CGoalDrawConfiguration.h  CLineup.h  CLineupConfiguration.h  CMatchConfiguration.h  CMatchState.h  CPenaltyShootoutConfiguration.h  CPenaltyShootoutState.h  CPeriodState.h  CPeriodStates.h  CPlayState.h  CPlayTime.h  CPlayerSkills.h  CPlayerState.h  CPossessionDrawConfiguration.h  CPossessionState.h  CStadium.h  CTacticConfiguration.h  CTacticsConfiguration.h  CTeam.h  CTieCondition.h
include/traits/: CPerson.h  CPlayTime.h  default.h  has_type.h  json.h
include/types/: CPerson.h  CPlayTime.h  IJsonable.h
src/: .gitignore  CPerson.cpp  CPlayTime.cpp  ENationality.cpp  ENationality.cpp.in  IJsonable.cpp  IWritable.cpp  NameUtils.cpp  NationalityConversionMaps.h.in  NationalityUtils.cpp
src/football/: CChanceState.cpp  CChancesDrawConfiguration.cpp  CDrawConfiguration.cpp  CExtraTime.cpp  CExtraTimePeriodPlayPolicy.cpp  CExtraTimePeriodPolicy.cpp  CExtraTimePeriodState.cpp  CExtraTimePeriodStates.cpp  CFoulDrawConfiguration.cpp  CFoulState.cpp  CGoalDrawConfiguration.cpp  CGoalRule.cpp  CLineup.cpp  CLineupConfiguration.cpp  CMatch.cpp  CMatchConfiguration.cpp  CMatchState.cpp  CMatchStrategy.cpp  CPenaltyShootoutConfiguration.cpp  CPenaltyShootoutState.cpp  CPenaltyState.cpp  CPeriodPlayPolicy.cpp  CPeriodPolicy.cpp  CPeriodState.cpp  CPeriodStates.cpp  CPlayState.cpp  CPlayTime.cpp  CPlayer.cpp  CPlayerSkills.cpp  CPlayerState.cpp  CPossessionDrawConfiguration.cpp  CPossessionState.cpp  CStadium.cpp  CTacticConfiguration.cpp  CTacticsConfiguration.cpp  CTeam.cpp  CTeamStrategy.cpp  CTieCondition.cpp  GoalRuleConversionMaps.h  GoalRuleUtils.cpp  (+10 more)
tests/: ATest.cpp  ATest.h  CMakeLists.txt  FileList.cmake  ITest.cpp  ITest.h
tests/unit/: TEnumDistribution.cpp  TNationalityUtils.cpp  TPerson.cpp  TPlayTime.cpp
tests/unit/football/: TChanceState.cpp  TChancesDrawConfiguration.cpp  TDrawConfiguration.cpp  TExtraTime.cpp  TExtraTimePeriodState.cpp  TFoulDrawConfiguration.cpp  TFoulState.cpp  TGoalDrawConfiguration.cpp  TGoalRule.cpp  TLineup.cpp  TLineupConfiguration.cpp  TMatch.cpp  TMatchConfiguration.cpp  TMatchState.cpp  TMatchStrategy.cpp  TPenaltySequenceUtils.cpp  TPenaltyShootoutConfiguration.cpp  TPenaltyShootoutState.cpp  TPenaltyState.cpp  TPeriodState.cpp  TPeriodStates.cpp  TPlayState.cpp  TPlayTime.cpp  TPlayer.cpp  TPlayerSkills.cpp  TPlayerState.cpp  TPossessionDrawConfiguration.cpp  TPossessionState.cpp  TStadium.cpp  TTacticConfiguration.cpp  TTacticsConfiguration.cpp  TTeam.cpp  TTeamStrategy.cpp  TTieCondition.cpp
